[feature/Setup-404-and-folder-specific-pages]-code changed